--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #smtp mail properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=your email address through which you will send the link
-spring.mail.password= password of your email address
+spring.mail.username=ducc0223i1@gmail.com
+spring.mail.password=Ducpro@1
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
