--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 #Database
-spring.datasource.url=jdbc:mysql://localhost:3306/project
+spring.datasource.url=jdbc:mysql://localhost:3306/md6
 spring.datasource.username=root
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -18,6 +18,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=ducc0223i1@gmail.com
-spring.mail.password=Ducpro@1
+spring.mail.password=tnrtfpaopunuwwgk
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
